--- a/class.html
+++ b/class.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <div class="accordion">
+        <div class="accordion" id="js-accordion">
             <a href="" class="accordion-trigger">
                 Q1.ああああ
             </a>
@@ -15,7 +15,7 @@
                 A1.ああああ
             </div>
         </div>
-        
+
         <div class="accordion">
             <a href="" class="accordion-trigger">
                 Q2.いいいい
@@ -26,6 +26,6 @@
         </div>
 
 
-<script src="class.js"></script>
+        <script src="class.js"></script>
     </body>
 </html>
