--- a/class.html
+++ b/class.html
@@ -7,21 +7,38 @@
     </head>
     <body>
 
-        <div class="accordion" id="js-accordion">
-            <a href="" class="accordion-trigger">
+        <div class="accordion" id="js-faq">
+            <p class="accordion-trigger">
                 Q1.ああああ
-            </a>
+            </p>
             <div class="accordion-contents">
                 A1.ああああ
             </div>
-            <a href="" class="accordion-trigger">
+            <p class="accordion-trigger">
                 Q2.いいいい
-            </a>
+            </p>
             <div class="accordion-contents">
                 A2.いいいい
             </div>
         </div>
 
+        <br><br><br>
+
+        <div class="accordion" id="js-accordion">
+            <a href="" class="accordion-trigger">
+                Q1.うううう
+            </a>
+            <div class="accordion-contents">
+                A1.うううう
+            </div>
+            
+            <a href="" class="accordion-trigger">
+                Q2.ええええ
+            </a>
+            <div class="accordion-contents">
+                A2.ええええ
+            </div>
+        </div>
 
         <script src="class.js"></script>
     </body>
