--- a/class.html
+++ b/class.html
@@ -40,6 +40,17 @@
             </div>
         </div>
 
+        <br>
+
+        <dl class="accordion" id="js-accordion-mini">
+            <dt class="accordion-trigger">
+                Q999.うううう
+            </dt>
+            <dd class="accordion-contents">
+                A999.ええええ
+            </dd>
+        </dl>
+
         <script src="class.js"></script>
     </body>
 </html>
