--- a/class2.html
+++ b/class2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <div class="accordion">
+        <div class="accordion" id="js-accordion">
             <a href="" class="accordion-trigger">
                 Q1.ああああ
             </a>
@@ -22,7 +22,7 @@
                 A2.いいいい
             </div>
         </div>
-        
+
         <script src="class2.js"></script>
     </body>
 </html>
