--- a/class2.html
+++ b/class2.html
@@ -15,9 +15,9 @@
                 A1.ああああ
             </div>
 
-            <div href="" class="accordion-trigger">
+            <a href="" class="accordion-trigger">
                 Q2.いいいい
-            </div>
+            </a>
             <div class="accordion-contents">
                 A2.いいいい
             </div>
