--- a/class2.html
+++ b/class2.html
@@ -23,6 +23,23 @@
             </div>
         </div>
 
+        <br>
+
+        <div class="accordion" id="aaa">
+            <p class="accordion-trigger">
+                Q3.ううううううううううう
+            </p>
+            <div class="accordion-contents">
+                A3.ううううううううううう
+            </div>
+            <p class="accordion-trigger">
+                Q4.えええええええええええええええええ
+            </p>
+            <div class="accordion-contents">
+                A4.えええええええええええええええええ
+            </div>
+        </div>
+
         <script src="class2.js"></script>
     </body>
 </html>
