exportとmodule付与して準備

--- a/class2.html
+++ b/class2.html
@@ -40,6 +40,6 @@
             </div>
         </div>
 
-        <script src="class2.js"></script>
+        <script src="class2.js" type="module"></script>
     </body>
 </html>
